added new functions for attributes

--- a/models/parcel/CMakeLists.txt
+++ b/models/parcel/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.6) # for CMakePushCheckState
+cmake_minimum_required(VERSION 3.0)
 project(icicle CXX C)
 enable_testing()
 
