--- a/models/parcel/tests/Grabowski_and_Pawlowska_2023/CMakeLists.txt
+++ b/models/parcel/tests/Grabowski_and_Pawlowska_2023/CMakeLists.txt
@@ -1,13 +1,13 @@
+find_package(Boost COMPONENTS iostreams system REQUIRED)
+
 add_executable(plot plot.cpp)
 add_test(plot plot ${CMAKE_CURRENT_BINARY_DIR})
+target_link_libraries(plot ${Boost_LIBRARIES})
+target_include_directories(plot PUBLIC ${Boost_INCLUDE_DIRS})
+
 
 add_executable(parcel parcel.cpp)
 target_link_libraries(parcel PRIVATE clphxx::cloudphxx_lgrngn)
 target_compile_features(parcel PUBLIC cxx_std_20)
-
-find_package(Boost COMPONENTS iostreams system REQUIRED)
-target_link_libraries(plot ${Boost_LIBRARIES})
-target_include_directories(plot PUBLIC ${Boost_INCLUDE_DIRS})
-#else()
-#    message(FATAL_ERROR "Boost (or some of its components) not found.")
-#endif()
+target_link_libraries(parcel PRIVATE ${Boost_LIBRARIES})
+target_include_directories(parcel PUBLIC ${Boost_INCLUDE_DIRS})
