double precision; init option; CMake fixes; 0D

--- a/models/parcel/CMakeLists.txt
+++ b/models/parcel/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
-project(icicle CXX C)
+project(parcel_cxx CXX C)
 enable_testing()
 
 find_package(libcloudph++)
