GA: use master branches of actions maintained by us

--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -24,7 +24,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: build libcloudph++
-      uses: igfuw/libcloudphxx_build@v0.6
+      uses: igfuw/libcloudphxx_build@master
       with:
         disable_cuda: ${{matrix.disable_cuda}}
         build_type: ${{matrix.build_type}}
@@ -55,7 +55,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: build libcloudph++
-      uses: igfuw/libcloudphxx_build@v0.6
+      uses: igfuw/libcloudphxx_build@master
       with:
         disable_cuda: ${{matrix.disable_cuda}}
         build_type: ${{matrix.build_type}}
@@ -102,7 +102,7 @@ jobs:
       run: tar -xvf build.tar
 
     - name: load UWLCM Singularity image
-      uses: igfuw/load_UWLCM_singularity_image@v0.2b
+      uses: igfuw/load_UWLCM_singularity_image@master
       with:
         path: ${{ github.workspace }}/singularity_images
         tag: ${{ matrix.tag }}
@@ -206,7 +206,7 @@ jobs:
       run: tar -xvf build.tar
 
     - name: load UWLCM Singularity image
-      uses: igfuw/load_UWLCM_singularity_image@v0.2b
+      uses: igfuw/load_UWLCM_singularity_image@master
       with:
         path: ${{ github.workspace }}/singularity_images
 
@@ -265,7 +265,7 @@ jobs:
     - run: grep diag_accr include/libcloudph++/lgrngn/particles.hpp
 
     - name: build libcloudph++
-      uses: igfuw/libcloudphxx_build@v0.6
+      uses: igfuw/libcloudphxx_build@master
       with:
         disable_cuda: ${{matrix.disable_cuda}}
         build_type: ${{matrix.build_type}}
