CMAKE: more debug output about detection of CUDA devices

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,9 +190,11 @@ if (CMAKE_CUDA_COMPILER)
   if (NOT status EQUAL 0)
     message(FATAL_ERROR "${pfx}: test program failed")
   endif()
+  message(STATUS "output of CUDA devices detection: ${msg}")
   separate_arguments(msg)
   list(REMOVE_ITEM msg "")
   list(LENGTH msg gpu_count)
+  message(STATUS "number of CUDA devices detected: ${gpu_count}")
   if(gpu_count GREATER 1 OR LIBCLOUDPHXX_FORCE_MULTI_CUDA)
     # compile the multi_CUDA backend
     message(STATUS "Detected more than 1 GPU or LIBCLOUDPHXX_FORCE_MULTI_CUDA set, the multi_CUDA backend will be built.")
