CMake: debug output of cudae devices detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,7 +186,8 @@ if (CMAKE_CUDA_COMPILER)
   if (NOT status EQUAL 0) 
     message(FATAL_ERROR "${pfx}: nvcc failed\n ${msg}")
   endif()
-  execute_process(COMMAND "./a.out" WORKING_DIRECTORY ${tmpdir} RESULT_VARIABLE status OUTPUT_VARIABLE msg)
+  execute_process(COMMAND "./a.out" WORKING_DIRECTORY ${tmpdir} RESULT_VARIABLE status OUTPUT_VARIABLE msg ERROR_VARIABLE err)
+  message(STATUS "error output of CUDA devices detection: ${err}")
   if (NOT status EQUAL 0)
     message(FATAL_ERROR "${pfx}: test program failed")
   endif()
