--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -19,6 +19,7 @@ jobs:
           # not enough RAM to compile Debug CUDA on 4 threads
           threads: 1
           tag: "uwlcm_ubuntu_24_04_cuda_12_9_0"
+          app_opts: "--nv"
 
     steps:
     - uses: actions/checkout@v2
@@ -31,6 +32,7 @@ jobs:
         threads: ${{matrix.threads}}
         path: ${{ github.workspace }}
         tag: ${{ matrix.tag }}
+        app_opts: ${{ matrix.app_opts }}
 
   build:
     runs-on: ubuntu-24.04
