cmake: more verbose output of cuda device detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,26 +158,47 @@ if (CMAKE_CUDA_COMPILER)
   message(STATUS "Trying to obtain CUDA capability of local hardware...")
   set(pfx "compute cabability check")
   execute_process(COMMAND "mktemp" "-d" "/tmp/tmp.XXX" RESULT_VARIABLE status OUTPUT_VARIABLE tmpdir)
+  string(STRIP "${tmpdir}" tmpdir)  # Removes leading/trailing whitespace and newlines
   if (NOT status EQUAL 0) 
     message(FATAL_ERROR "${pfx}: mkdtemp failed")
   endif()
   file(WRITE "${tmpdir}/test.cu" "
     #include <iostream>
+    #include <fstream>
     
     int main() 
     {
       int DeviceCount;
-      cudaGetDeviceCount(&DeviceCount);
+      std::ofstream fdev(\"${tmpdir}/device_capability.txt\");
+      cudaError_t error_id = cudaGetDeviceCount(&DeviceCount);
+
+      if (error_id != cudaSuccess) {
+        std::cerr << \"cudaGetDeviceCount returned \" <<  static_cast<int>(error_id) << \" -> \" << cudaGetErrorString(error_id) << std::endl;
+        exit(EXIT_FAILURE);
+      }
+
+      int driverVersion, runtimeVersion;
       for(int i = 0 ; i < DeviceCount; ++i)
       {
+        cudaSetDevice(i);
         cudaDeviceProp prop; 
-        cudaError_t err = cudaGetDeviceProperties(&prop, i); 
-        if (err == cudaSuccess)
-          std::cout << prop.major << prop.minor << \" \" ;
+        cudaError_t error_id = cudaGetDeviceProperties(&prop, i); 
+        if (error_id == cudaSuccess)
+        {
+          std::cout << \"    Device \" << i << \": \" << prop.name << std::endl;
+          cudaDriverGetVersion(&driverVersion);
+          cudaRuntimeGetVersion(&runtimeVersion);
+          std::cout << \"      CUDA Driver Version / Runtime Version  \" 
+            << driverVersion / 1000 << \".\" << (driverVersion % 100) / 10 << \" / \" 
+            <<  runtimeVersion / 1000 << \".\" << (runtimeVersion % 100) / 10 << std::endl;
+          std::cout << \"      CUDA Capability Major/Minor version number: \" << prop.major << \".\" << prop.minor << std::endl;
+          fdev << prop.major << prop.minor << \" \" ;
+        }
         else
         {   
-          std::cerr << cudaGetErrorString(err);
-          std::cout << \"? \";
+          std::cerr << \"cudaGetDeviceProperties returned \" <<  static_cast<int>(error_id) << \" -> \" << cudaGetErrorString(error_id) << std::endl;
+          // std::cout << \"? \";
+          exit(EXIT_FAILURE);
         }   
       }
     }
@@ -191,7 +212,9 @@ if (CMAKE_CUDA_COMPILER)
   if (NOT status EQUAL 0)
     message(FATAL_ERROR "${pfx}: test program failed")
   endif()
-  message(STATUS "output of CUDA devices detection: ${msg}")
+  message(STATUS "output of CUDA devices detection:\n ${msg}")
+  # read device capabilites from the file created by test.cu
+  file(READ "${tmpdir}/device_capability.txt" msg)
   separate_arguments(msg)
   list(REMOVE_ITEM msg "")
   list(LENGTH msg gpu_count)
@@ -211,9 +234,9 @@ if (CMAKE_CUDA_COMPILER)
     # https://docs.nvidia.com/cuda/cuda-compiler-driver-nvcc/index.html#gpu-compilation
     list(SORT msg)
     list(GET msg 0 VIRT)
-    if (VIRT STREQUAL "?")
-      set (VIRT "35")
-    endif()
+#    if (VIRT STREQUAL "?")
+#      set (VIRT "35")
+#    endif()
     set_target_properties(cloudphxx_lgrngn PROPERTIES CUDA_ARCHITECTURES ${VIRT}-virtual)
 #    set_property(TARGET  PROPERTY CUDA_ARCHITECTURES 70-real 72-virtual)
 
