cmake: fix c++ typo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -172,7 +172,7 @@ if (CMAKE_CUDA_COMPILER)
       std::ofstream fdev(\"${tmpdir}/device_capability.txt\");
       cudaError_t error_id = cudaGetDeviceCount(&DeviceCount);
 
-      if (error_id != cudaSuccess && error_id != 100) { # 100 is 'no CUDA-capable device is detected'
+      if (error_id != cudaSuccess && error_id != 100) { // 100 is 'no CUDA-capable device is detected'
         std::cerr << \"cudaGetDeviceCount returned \" <<  static_cast<int>(error_id) << \" -> \" << cudaGetErrorString(error_id) << std::endl;
         exit(EXIT_FAILURE);
       }
