--- a/tests/python/unit/CMakeLists.txt
+++ b/tests/python/unit/CMakeLists.txt
@@ -5,7 +5,7 @@ foreach(test api_blk_1m api_blk_2m api_lgrngn api_common segfault_20150216 col_k
   add_test(
     NAME ${test}
     WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bindings/python" 
-    COMMAND ${PYTHON_EXECUTABLE} "${CMAKE_SOURCE_DIR}/tests/python/unit/${test}.py"
+    COMMAND ${Python3_EXECUTABLE} "${CMAKE_SOURCE_DIR}/tests/python/unit/${test}.py"
   )
 endforeach()
 
@@ -16,7 +16,7 @@ if(NOT USE_MPI)
     add_test(
       NAME ${test}
       WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bindings/python" 
-      COMMAND ${PYTHON_EXECUTABLE} "${CMAKE_SOURCE_DIR}/tests/python/unit/${test}.py"
+      COMMAND ${Python3_EXECUTABLE} "${CMAKE_SOURCE_DIR}/tests/python/unit/${test}.py"
     )
   endforeach()
 endif()
@@ -27,6 +27,6 @@ foreach(test lgrngn_adve)
   add_test(
     NAME ${test}
     WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bindings/python" 
-    COMMAND ${PYTHON_EXECUTABLE} "-m" "pytest" "-s" "${CMAKE_SOURCE_DIR}/tests/python/unit/${test}.py"
+    COMMAND ${Python3_EXECUTABLE} "-m" "pytest" "-s" "${CMAKE_SOURCE_DIR}/tests/python/unit/${test}.py"
   )
 endforeach()
